implement hash tables with quadratic probing and linear probing